--- a/src/App.scss
+++ b/src/App.scss
@@ -26,11 +26,12 @@ body {
             padding: 0 0 1%;
             border-radius: 9px;
             box-shadow: 3px 3px 2px rgba(28, 38, 73, 0.3);
-            transition: .3s;
+            transition: .35s;
             &:hover {
+                cursor: pointer;
                 transform: scale(1.1);
                 box-shadow: 10px 8px 5px rgba(28, 38, 73, 0.225);
-                transition: .3s;
+                transition: .2s;
             }
             img {
                 width: 88px;
